fixed table spacing to better match wireframe

--- a/part-3/style.css
+++ b/part-3/style.css
@@ -50,10 +50,13 @@ width:700px;
 th {
   text-align: left;
   padding: 10px 0px 10px 0px;
+  padding-left: 20px;
+
 }
 
 td {
   padding-bottom: 10px;
+  padding-left: 20px;
 }
 
 #sidebar {
